# GodotRPCGym

./: README.md  requirements.yml
GodotSharedMemory/: SCsub  cSharedMemory.cpp  cSharedMemory.h
InvPendulum/: Environment.gd  Environment.tscn  InvPendulum.pck  ddpg_actor.jit  ddpg_actor.tres  export_presets.cfg  project.godot  trace_model.py
Lander/LanderEnv/: Agent.gd  Environment.gd  Environment.tscn  Flag.png.import  LanderEnv.pck  ddpg_actor.jit  ddpg_actor.tres  export_presets.cfg  project.godot  trace_model.py
Lander/LanderEnv/.import/: Flag.png-a77beb902e20e2c1ec3cf9dfad8f2036.md5  Flag.png-a77beb902e20e2c1ec3cf9dfad8f2036.stex
SmartCreeps/: Main.gd  Main.tscn  Mob.gd  Mob.tscn  export_presets.cfg  player.gd  player.tscn  ppo_actor.jit  ppo_actor.tres  project.godot
SmartCreeps/.import/: playerGrey_up1.png-6bd114d0a6beac91f48e3a7314d44564.etc2.stex  playerGrey_up1.png-6bd114d0a6beac91f48e3a7314d44564.md5  playerGrey_up1.png-6bd114d0a6beac91f48e3a7314d44564.s3tc.stex  playerGrey_walk1.png-c4773fe7a7bf85d7ab732eb4458c2742.etc2.stex  playerGrey_walk1.png-c4773fe7a7bf85d7ab732eb4458c2742.md5  playerGrey_walk1.png-c4773fe7a7bf85d7ab732eb4458c2742.s3tc.stex
SmartCreeps/art/: playerGrey_up1.png.import  playerGrey_walk1.png.import
src/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp.bak
src/client/: CreeperEnv.py  InvertedPendulumEnv.py  client_test.py  observation_action_pb2.py  observation_action_pb2_grpc.py  rlc_client.py  rlc_client.py.bak  test.py
src/client/ppo_creeper_tb/PPO_1/: events.out.tfevents.1647776417.pop-os.148919.0
src/godotInterface/: cGodotSharedInterface.cpp  cGodotSharedInterface.h
src/protos/: observation_action.proto
src/server/: rlc_server.cc
test/: a.out  semephore.cpp  tensor.cpp
test_memshare/: Env.gd  Env.tscn  project.godot
